cmake_minimum_required(VERSION 3.7)
project(SimpleX264)

set(PROJECT_SRCS
${PROJECT_SOURCE_DIR}/src/SimpleX264.cpp
)

source_group("src" FILES ${PROJECT_SRCS})

find_package( X264 REQUIRED )

add_executable(${PROJECT_NAME} ${PROJECT_SRCS})

target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC
                          ${X264_INCLUDE_DIRS})

target_link_libraries(${PROJECT_NAME} ${X264_LIBRARIES} jcy_misctools)

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${CMAKE_PROJECT_NAME}/apps)

install(TARGETS ${PROJECT_NAME}
        EXPORT ${CMAKE_PROJECT_NAME}Targets
        DESTINATION bin)
